feat: User and UserProfile OpenAPI specs
